--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -1,3 +1,86 @@
+html, body {
+  padding: 10px;
+}
+
+ul.menu {
+  list-style: none;
+  padding: 0;
+  background-color: #f4f4f4;
+  box-shadow: 0 3px 2px rgba(0,0,0,.2);
+}
+
+ul.menu li {
+  width: 100px;
+  padding: 15px;
+  text-align: center;
+  float: left;
+}
+
+ul.menu li a {
+  color: #b12d2b;
+  text-decoration: none;
+}
+
+
+input, textarea {
+  font-size: 14px;
+  padding-left: 10px;
+  line-height: 35px;
+  border: 1px solid #ccc;
+  margin: 10px 0;
+  width: 100%;
+}
+
+button {
+  background: #b12d2b;
+  border: 1px solid #777;
+  border-color: rgba(0,0,0,.2);
+  border-bottom-color: #333;
+  border-bottom-color: rgba(0,0,0,.4);
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  padding: 6px 10px;
+  text-align: center;
+  text-decoration: none;
+  text-shadow: 0 1px 0 rgba(0,0,0,.5);
+  user-select: none;
+  position: relative;
+  border-radius: .3em;
+}
+
+.title {
+  text-align: center;
+  font-size: 20px;
+  color: #2e2e2e;
+}
+
+.status, .status a {
+  color: #b12d2b;
+  font-size: 13px;
+}
+
+.content {
+  color: #787878;
+  font-size: 16px;
+  line-height: 1.5em;
+}
+
+
+.clearfix:before,
+.clearfix:after {
+  content: "";
+  display: table;
+}
+
+.clearfix:after {
+  clear: both;
+}
+
+.clearfix {
+  *zoom: 1;
+}
+
 /* Make clicks pass-through */
 #nprogress {
   pointer-events: none;
